<resources>
    <string name="pcapdroid_app_name" translatable="false">mdm blocking</string>
    <string name="default_collector_ip" translatable="false">127.0.0.1</string>
    <string name="default_collector_port" translatable="false">1234</string>
    <string name="ip_and_port" translatable="false">%1$s:%2$d</string>
    <string name="ipv6_and_port" translatable="false">[%1$s]:%2$d</string>
    <string name="app_and_proto" translatable="false">%1$s (%2$s)</string>
    <string name="sni" translatable="false">SNI</string>
    <string name="url" translatable="false">URL</string>
    <string name="whois_lookup" translatable="false">WHOIS</string>
    <string name="installation_id" translatable="false">Installation ID</string>
    <string name="license_code" translatable="false">License code</string>
    <string name="root" translatable="false">root</string>
    <string name="app_license" translatable="false">PCAPdroid is distributed in the hope that it will be useful, but WITHOUT
        ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
        See the <a href='https://www.gnu.org/licenses/gpl-3.0-standalone.html'>GNU General Public License or later</a> for
        more details</string>
    <string name="opensource_licenses" translatable="false"><b>Open Source Licenses:</b><br />\n\n
        - zdtun: <a href='https://github.com/emanuele-f/zdtun/blob/master/COPYING'>LGPL-3.0</a>\n\n
        - nDPI: <a href='https://github.com/ntop/nDPI/blob/dev/COPYING'>LGPL-3.0</a>\n\n
        - CustomActivityOnCrash: <a href='https://github.com/Ereza/CustomActivityOnCrash/blob/master/LICENSE'>Apache-2.0</a>\n\n
        - Gson: <a href='https://github.com/google/gson/blob/master/LICENSE'>Apache-2.0</a>\n\n
        - Brotli decoder: <a href='https://github.com/google/brotli/blob/master/LICENSE'>MIT</a>\n\n
        - mitmproxy: <a href='https://github.com/mitmproxy/mitmproxy/blob/main/LICENSE'>MIT</a>\n\n
        - Chaquopy: <a href='https://github.com/chaquo/chaquopy/blob/master/LICENSE.txt'>MIT</a>\n\n
        - MaxMind DB Reader: <a href='https://github.com/maxmind/MaxMind-DB-Reader-java/blob/main/LICENSE'>Apache-2.0</a>\n\n
        - FlagKit: <a href='https://github.com/madebybowtie/FlagKit/blob/master/LICENSE'>MIT</a>\n\n
        - IP Geolocation by <a href='https://db-ip.com'>DB-IP</a>\n\n
        - AppIntro: <a href='https://github.com/AppIntro/AppIntro/blob/main/LICENSE'>Apache-2.0</a>\n\n
        - QrGenerator: <a href='https://github.com/androidmads/QRGenerator/blob/master/LICENSE.md'>MIT</a>\n\n
        - Sparsehash: <a href='https://github.com/sparsehash/sparsehash/blob/master/COPYING'>BSD-3-Clause</a>\n\n
        - CIDRUtils: <a href='https://github.com/edazdarevic/CIDRUtils'>MIT</a>\n\n
        - Font Awesome: <a href='https://fontawesome.com/license/free'>Licenses</a>\n\n
        - App icon by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">flaticon</a>\n\n
        - SourceCodePro font: <a href='https://github.com/adobe-fonts/source-code-pro/blob/release/LICENSE.md'>OFL-1.1</a>\n\n
        </string>
    <string name="wireshark_licenses" translatable="false"><b>PCAP Decryption:</b><br />\n\n
        - Wireshark: <a href='hhttps://github.com/wireshark/wireshark/blob/master/COPYING'>GPL-2.0</a>\n\n
        - ushark: <a href='https://github.com/altafinance/ushark'>GPL-2.0</a>\n\n
        - libiconv: <a href='https://www.gnu.org/software/libiconv'>LGPL-2.1</a>\n\n
        - glib: <a href='https://gitlab.gnome.org/GNOME/glib/-/blob/main/COPYING'>LGPL-2.1</a>\n\n
        - gpgerror: <a href='https://github.com/gpg/libgpg-error/blob/master/COPYING'>LGPL-2.1</a>\n\n
        - gcrypt: <a href='https://gnupg.org/software/libgcrypt/index.html'>LGPL-2.1</a>\n\n
        - nghttp2: <a href='https://github.com/nghttp2/nghttp2/blob/master/COPYING'>MIT</a>\n\n
        </string>
    <string name="connections_csv_fields" translatable="false">IPProto,SrcIP,SrcPort,DstIp,DstPort,UID,App,PackageName,Proto,Status,Info,BytesSent,BytesRcvd,PktsSent,PktsRcvd,FirstSeen,LastSeen</string>
    <string name="unlock_token" translatable="false">Unlock token</string>
    <string name="mstartmdm">Start vpn from mdm</string>
    <string name="mremovemdm">remove vpn from mdm</string>
    <string name="mchangepwd">change password</string>
    <string name="mgetcurrentpwd">insert password</string>
    <string name="mnotmatchpwd">not match or empty</string>
    <string name="mwelcomepwd">welcome set password</string>
    <string name="mupdate">update</string>
    <string name="send_mail">send email</string>
    <string name="send">send</string>
    <string name="empty">empty</string>
    <string name="send_successful">send successfully</string>
    <string name="mailsub">רשימה לבנה(בטא)</string>
    <string name="mailbod">Leave here enlightenments and comments and reports and requests</string>
    <string name="mmode_multimedia">multimedia</string>
    <string name="mmode_all">all</string>
    <string name="mdm_settings">mdm settings</string>
    <string name="settings_shortcut">settings shortcut multimedia</string>
    <string name="tvremove_root">If your device is rooted, remove the root after activation to avoid bypasses!</string>
    <string name="bucpcmd">To activate with ADB click here to copy the command!</string>
    <string name="buadbmult">Connecting and disabling to multimedia and root (and the old option to Wi-Fi)!</string>
    <string name="buadbwifi">adb pair/connect with wifi!</string>
    <string name="buqrmdm">barcode qr from device to device!</string>
    <string name="activinstructions">הוראות הפעלה למולטימדיה (ts10, ts18 ועוד)!\nלוחצים על העתקת הקוד הנפוץ למולטימדיה (john@tw-desktop) (באם זה לא הקוד הנכון תוכלו לחפש במתמחים טופ או ברכבים זה לזה מה הקוד שלכם לפתיחת adb)\nלוחצים על פתיחת מצב מפתחים\nמנווטים ולוחצים על ניפוי באגים בusb זה יבקש לכם את הקוד שהעתקתם לפני זה\nחוזרים לאפליקציה לוחצים על \"חיבור והשבתה למולטימדיה ולרוט\" \nלוחצים על \"השבתת חשבונות עם adb למולטימדיה\" מחכים לראות למטה שזה משבית אפליקציות\nלוחצים על \"חיבור למולטימדיה\" מחכים שיהיה כתוב הפעלה הצליחה\nלוחצים על \"הפעלת חשבונות עם adb למולטימדיה\" מחכים לראות למטה שזה מפעיל בחזרה את כל האפליקציות המושבתות\n(במקרה ושכחתם להפעיל בחזרה אפליקציות זה נמצא בפיצ\'רים נוספים/הפעלת חשבונות!)\nבהצלחה!\n\nהוראות הפעלה עם ניפוי באגים אלחוטי!\nכדי להפעיל את החסימה במכשיר סמסונג לדוגמא -\nדבר ראשון תצטרכו להסיר חשבון של סמסונג אם הכנסתם חשבון סמסונג במכשיר.\nתפתחו בהגדרות - מידע על הטלפון (יש גם קיצור לזה באפליקציה) תחפשו את המילה \"build\"\nתלחצו עליו 6 פעמים עד שיהיה כתוב שהנך במצב מפתח\nתנווטו בחזרה להגדרות - מערכת אמור להיות שם משהו חדש - אפשרויות למפתחים. (יש לזה גם קיצור באפליקציה) תכנסו בזה תנווטו לניפוי באגים אלחוטי.\nתצטרכו להתחבר לויפי כדי לפתוח את הניפוי באגים אלחוטי(אפילו שאין בויפי הזה אינטרנט - לדוגמא ממקרר או מזגן או מדפסת...)\nלפני שאתם פותחים ניפוי באגים אלחוטי תפתחו את \"adb pair/connect עם ויפי\" שיש באפליקציה ותלחצו על הלחצן הראשון - \"התחל גילוי לחיבור עם קוד התאמה\" זה יתחיל לחפש תעברו להגדרות/מערכת/ניפוי באגים אלחוטי תפתחו את זה ותתנו אישור לדיאלוג שעולה, ואז תלחצו על חיבור באמצעות קוד התאמה יעלה לכם התראה שבזה תצטרכו להכניס את קוד ההתאמה שכתוב לכם בדיאלוג שעלה לכם, (חשוב להישאר בהגדרות מתי שהדיאלוג עם קוד ההתאמה עדיין לא ירד מהמסך) אחרי שזה מצליח אוטומטית זה עובר למצב הרצת הפקודות של הסתרת חשבונות, הפעלת החסימה, והפעלת חשבונות.\n(במקרה ושכחתם להפעיל בחזרה אפליקציות זה נמצא בפיצ\'רים נוספים/הפעלת חשבונות באמצעות חיבור ויפי!)\nבהצלחה!</string>
    <string name="payloadvi">הצגת עומס</string>
    <string name="payloadvi_summary">הצגת עומס של חיבורים(עשוי רק לבדוק על המקום ולא להשאיר דלוק...)</string>
    <string name="buinstructionvpn">Instructions for vpn!</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="title_activity_settings">Settings</string>
    <string name="ready">start vpn without mdm</string>
    <string name="http_server">HTTP server</string>
    <string name="tcp_udp_exporter">TCP/UDP exporter</string>
    <string name="http_server_port">HTTP server port</string>
    <string name="receiver_ip_address">Collector IP address</string>
    <string name="receiver_port">Collector port</string>
    <string name="traffic_dump">Traffic dump</string>
    <string name="other_prefs">Other</string>
    <string name="app_language">App language</string>
    <string name="socks5_proxy">SOCKS5</string>
    <string name="socks5_summary">Configure the redirection to a SOCKS5 proxy</string>
    <string name="app_log">Log</string>
    <string name="capture_prefs">Capture</string>
    <string name="dump_extensions">PCAPdroid extensions</string>
    <string name="dump_extensions_summary">Extend the packet dump format with additional metadata, such as the app which sent/received a given packet</string>
    <string name="dump_extensions_how_to">How to display the PCAPdroid dump extensions in Wireshark</string>
    <string name="security">Security</string>
    <string name="malware_detection">Malware detection</string>
    <string name="malware_detection_summary">Detect connections to known malicious hosts via third-party blacklists</string>
    <string name="start_at_boot">Start at boot</string>
    <string name="start_at_boot_summary">Auto-starts capture after boot</string>
    <string name="decryption_no_filter_warn">Select a target app when decrypting TLS to avoid losing your connection to the Internet</string>
    <string name="firewall">Firewall</string>
    <string name="tls_decryption">TLS decryption</string>
    <string name="tls_decryption_summary">Decrypt the SSL/TLS traffic by performing mitm. This may now work with some apps, check out the user guide</string>
    <string name="traffic_inspection">Traffic inspection</string>
    <string name="mitm_setup_wizard">Mitm setup wizard</string>
    <string name="full_payload">Full payload</string>
    <string name="full_payload_summary">Show the full connections payload (e.g. the full HTTP request and response). This requires a lot of memory, don\'t use in the long run</string>
    <string name="block_quick">Block QUIC</string>
    <string name="block_private_dns">Block private DNS</string>
    <string name="block_private_dns_summary">Detect and possibly block private DNS to inspect DNS traffic. Disabling this can hinder traffic analysis</string>
    <string name="ip_mode">VPN IP addresses</string>
    <string name="vpn_exemptions">VPN exemptions</string>
    <string name="vpn_exemptions_summary">Exempt some apps from the VPN connection. Their traffic will not be monitored</string>
    <string name="mitm_wizard_description">Configure the device for the TLS decryption</string>
    <string name="mitmproxy_opts">Additional mitmproxy options</string>
    <string name="mitmproxy_opts_description">Provide additional options for mitmproxy</string>
    <string name="pcapng_format">Pcapng format</string>
    <string name="pcapng_format_summary">Dump packets in the Pcapng dump format, which is more flexible and allows embedding TLS decryption secrets</string>
    <string name="decryption_rules">Decryption rules</string>
    <string name="restart_on_disconnection">Restart on disconnection</string>
    <string name="restart_on_disconnection_summary">Automatically restart the capture after being stopped by other VPN apps</string>
</resources>