<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_start"
        android:title="@string/start_button"
        android:orderInCategory="10"
        android:icon="@drawable/ic_play_arrow"
        android:showAsAction="always"
        />

    <item
        android:id="@+id/action_stop"
        android:title="@string/stop_button"
        android:orderInCategory="20"
        android:icon="@drawable/ic_media_stop"
        android:visible="false"
        android:showAsAction="always"
         />

    <item
        android:id="@+id/action_settings"
        android:title="@string/title_activity_settings"
        android:orderInCategory="30"
        android:icon="@drawable/ic_settings"
        android:showAsAction="ifRoom"
         />
    <item
        android:id="@+id/action_firewall"
        android:title="@string/firewall"
        android:orderInCategory="40"
        android:icon="@drawable/ic_shield"
        android:showAsAction="ifRoom"
    />
    <item
        android:id="@+id/action_malware"
        android:title="@string/malware_detection"
        android:orderInCategory="50"
        android:icon="@drawable/ic_bug"
        android:showAsAction="ifRoom"
    />
    <item
        android:id="@+id/action_decrypt"
        android:title="@string/decryption_rules"
        android:orderInCategory="60"
        android:icon="@drawable/ic_lock_open_alt"
        android:showAsAction="ifRoom"
    />
    <item
        android:id="@+id/action_log"
        android:title="@string/app_log"
        android:orderInCategory="60"
        android:icon="@drawable/ic_lock_open_alt"
        android:showAsAction="ifRoom"
    />
</menu>
